--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -38,7 +38,7 @@
 							</div> 
 							-->
 							<div class="swiper-slide">
-								<img src="resources/img/banner-grandopen.jpg" />
+								<img src="resources/img/banner-grandopen.jpg" onclick="javascript:location.href='/totalSearch_work?searchKeyword=사전출품';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
 								<img src="resources/img/banner-artpareDaegu.jpg" />
