--- a/src/main/resources/templates/thymeleaf/result_work.html
+++ b/src/main/resources/templates/thymeleaf/result_work.html
@@ -404,7 +404,7 @@
 						</div>
 						
 						<div class="text-center mg_t50">
-							<button type="button" class="btn-more" id="btn_more" onclick="dealSearchMore()"><span>more</span></button>
+							<!-- <button type="button" class="btn-more" id="btn_more" onclick="dealSearchMore()"><span>more</span></button> -->
 						</div>
 						
 					</div>
