--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -4,6 +4,7 @@
 	<style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     	.mySwiper4{height:auto;}
+    	.mySwiper3{height:auto;}
     	.ellipsis{
 			overflow:hidden;
 			text-overflow: ellipsis;
@@ -18,6 +19,27 @@
 	<div class="wrap">
 		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		<div class="body-wrap">
+		
+			<!-- 대가 작가 -->
+			<div class="contents max-1500" id="div_masterArtist">
+				<div class="cont-title3">
+					<h3>대가 작가<span>1950년 이전 데뷔한 작가입니다.</span></h3>
+					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
+				</div>
+				<div class="swi-box swi-show-4">
+					<div class="swiper mySwiper4">
+						<div class="swiper-wrapper" id="masterArtist">
+							<div class="swiper-slide"></div>
+						</div>
+						<!-- <div class="swiper-pagination swpa-2 pc-no"></div> -->
+					</div>
+					<div class="swiper-button-next ait-r ta-no swl-4"><span><img src="resources/img/icon/ait-r.png"></span></div>
+					<div class="swiper-button-prev ait-l ta-no swr-4"><span><img src="resources/img/icon/ait-l.png"></span></div>
+				</div>
+				<!-- <div class="text-center">
+					<button type="button" class="btn-more ta-no"><span>more</span></button>
+				</div> -->
+			</div>
 			
 			<!-- 원로 작가 -->
 			<div class="contents max-1500" id="div_seniorArtist">
@@ -26,7 +48,7 @@
 					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-3">
-					<div class="swiper mySwiper4">
+					<div class="swiper mySwiper3">
 						<div class="swiper-wrapper" id="seniorArtist">
 							<div class="swiper-slide"></div>
 						</div>
@@ -134,7 +156,7 @@
 		   	          },
 		   	        });
 	   	    	
-	   	    	var swiper = new Swiper(".mySwiper4", {
+	   	    	var swiper = new Swiper(".mySwiper3", {
 		   	          slidesPerView: 4,
 		   	          spaceBetween: 20,
 		   	          slidesPerGroup: 1,
@@ -151,6 +173,26 @@
 		   	          navigation: {
 		   	            nextEl: ".swl-3",
 		   	            prevEl: ".swr-3",
+		   	          },
+		   	        });  
+	   	    	
+	   	    	var swiper = new Swiper(".mySwiper4", {
+		   	          slidesPerView: 4,
+		   	          spaceBetween: 20,
+		   	          slidesPerGroup: 1,
+		   	          loop: true,
+		   	          loopFillGroupWithBlank: true,
+		   	       	  autoplay: {
+		               delay: 300000,
+		               disableOnInteraction: false,
+		             },
+		   	          pagination: {
+		   	            el: ".swiper-pagination",
+		   	            clickable: true,
+		   	          },
+		   	          navigation: {
+		   	            nextEl: ".swl-4",
+		   	            prevEl: ".swr-4",
 		   	          },
 		   	        });  
 	   	    	
@@ -196,7 +238,7 @@
 		   	          },
 		   	     });
 	   	    	
-	   	    	var swiper = new Swiper(".mySwiper4", {
+	   	    	var swiper = new Swiper(".mySwiper3", {
 		   	          slidesPerView: 3,
 		   	          spaceBetween: 30,
 		   	          slidesPerGroup: 1,
@@ -213,6 +255,26 @@
 		   	          navigation: {
 		   	            nextEl: ".swl-3",
 		   	            prevEl: ".swr-3",
+		   	          },
+		   	     });
+	   	    	
+	   	    	var swiper = new Swiper(".mySwiper4", {
+		   	          slidesPerView: 3,
+		   	          spaceBetween: 30,
+		   	          slidesPerGroup: 1,
+		   	          loop: true,
+		   	          loopFillGroupWithBlank: true,
+		   	          autoplay: {
+		               delay: 3000,
+		               disableOnInteraction: false,
+		             },
+		   	          pagination: {
+		   	            el: ".swiper-pagination",
+		   	            clickable: true,
+		   	          },
+		   	          navigation: {
+		   	            nextEl: ".swl-4",
+		   	            prevEl: ".swr-4",
 		   	          },
 		   	     });
 		       	
@@ -258,7 +320,7 @@
 		   	          },
 		   	     });
 	   	    	
-	   	    	var swiper = new Swiper(".mySwiper4", {
+	   	    	var swiper = new Swiper(".mySwiper3", {
 		   	          slidesPerView: 1,
 		   	          slidesPerGroup: 1,
 		   	          loop: true,
@@ -276,12 +338,25 @@
 		   	            prevEl: ".swr-3",
 		   	          },
 		   	     });
-	       	  
-	       	  
-	       	  
-	       	  
-	       	  
-	       	  
+	   	    	
+	   	    	var swiper = new Swiper(".mySwiper4", {
+		   	          slidesPerView: 1,
+		   	          slidesPerGroup: 1,
+		   	          loop: true,
+		   	          loopFillGroupWithBlank: true,
+		   	      	  autoplay: {
+		              delay: 3000,
+		              disableOnInteraction: false,
+		             },
+		   	          pagination: {
+		   	            el: ".swiper-pagination",
+		   	            clickable: true,
+		   	          },
+		   	          navigation: {
+		   	            nextEl: ".swl-4",
+		   	            prevEl: ".swr-4",
+		   	          },
+		   	     });
 	   	     };
 	   	}).resize();
       
@@ -362,10 +437,12 @@ function artistLibraryList(){
         	var upAndComingArtistHtml = "";
         	var middleAgedArtistHtml = "";
         	var seniorArtistHtml = "";
+        	var masterArtistHtml = "";
         	if(data != null && data != ""){
         		upAndComingArtist = data.result.upAndComingArtist;
         		middleAgedArtist = data.result.middleAgedArtist;
         		seniorArtist = data.result.seniorArtist;
+        		masterArtist = data.result.masterArtist;
         		
         		if(upAndComingArtist.length > 0){
 	        		for(var i=0; i<upAndComingArtist.length; i++){
@@ -444,6 +521,32 @@ function artistLibraryList(){
 	        		$("#seniorArtist").append(seniorArtistHtml).trigger("create");
         		}else{
         			$("#div_seniorArtist").css("display", "none");
+        		}
+        		if(masterArtist.length > 0){
+	        		for(var i=0; i<masterArtist.length; i++){
+	        			masterArtistHtml += '<div class="swiper-slide" style="cursor:pointer;" artstSq="'+ masterArtist[i].artstSq +'">';
+		        		masterArtistHtml += '	<a class="hd-div3">';
+		        		if(masterArtist[i].artstWorkImgUrl != null && masterArtist[i].artstWorkImgUrl != ""){
+		        			masterArtistHtml += '		<div class="hd-bg3"><img src="'+ masterArtist[i].artstWorkImgUrl +'" /></div>';
+		        		}else{
+		        			masterArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
+		        		}
+		        		if(masterArtist[i].artstProfileImgUrl != null && masterArtist[i].artstProfileImgUrl != ""){
+		        			masterArtistHtml += '		<div class="user-1"><img src="'+ masterArtist[i].artstProfileImgUrl +'" style="border-radius:40%;"></div>';
+		        		}else{
+		        			masterArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
+		        		}
+		        		masterArtistHtml += '		<div class="hd-text">';
+		        		masterArtistHtml += '			<h4>'+ masterArtist[i].artstActvtyNm +'('+ masterArtist[i].artistBirthYear +')</h4>';
+		        		masterArtistHtml += '			<div class="ellipsis"><div class="hd-d1">'+ masterArtist[i].artstSelfIntro +'</div></div>';
+		        		masterArtistHtml += '		</div>';
+		        		masterArtistHtml += '	</a>';
+	        			masterArtistHtml += '</div>';
+	        		}
+	        		$("#masterArtist").empty();
+	        		$("#masterArtist").append(masterArtistHtml).trigger("create");
+        		}else{
+        			$("#div_masterArtist").css("display", "none");
         		}
         	}
         	
