소장품등록 오류 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -678,7 +678,7 @@ function collectionReg(){
 	        processData : false,
 	        success: function(data) {
 	        	if(data != 0 || data != null || data != ""){
-	        		modalAlertShow("성공적으로 저장되었습니다.", "reload");
+	        		modalAlertShow("성공적으로 저장되었습니다.", "myCollection");
 	        	}
 	        },
 	        error: function(error) {
