--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -53,6 +53,7 @@
 			                              <select class="selectpicker" id="dealSttsCd" data-width="fit">
 			                                 <option value="ALL">전체</option>
 			                                 <option value="TP">판매중</option>
+			                                 <option value="TC">판매완료</option>
 			                                 <option value="PD">배송준비중</option>
 			                                 <option value="DS">배송중</option>
 			                                 <option value="DC">배송완료</option>
