--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -34,8 +34,8 @@
 					<div class="footer-text">
 						<ol>
 							<li>통신판매업 신고 : 제 2019-서울마포-1063호</li>
-							<li>개인정보관리책임자 : 이영중(help@dealing-art.com)</li>
-							<li>이메일 : cafe24@mainsion9.co,kr</li>
+							<li>개인정보관리책임자 : 이영중(privacy@dealing-art.com)</li>
+							<li>이메일 : help@dealing-art.com</li>
 							<!-- <li class="af-dn">개인정보관리책임자</li> 
 							<li> - 이영중(help@dealing-art.com) </li> -->
 						</ol>
@@ -55,7 +55,7 @@
 					<div class="footer-text">
 						<ol>
 							<li class="af-dn">통신판매업 신고 : 제 2019-서울마포-1063호</li>
-							<li>개인정보관리책임자 : 이영중(help@dealing-art.com)</li>
+							<li>개인정보관리책임자 : 이영중(privacy@dealing-art.com)</li>
 						</ol>
 					</div>
 				</div>
@@ -67,8 +67,8 @@
 							<li class="dib af-dn">주소 : 03970 서울특별시 마포구 성산동 258-22</li>
 							<li class="dib af-dn">대표번호 : 1533-3024</li>
 							<li class="af-dn">팩스번호 : 02-336-2920</li>
-							<li class="af-dn">이메일 : cafe24@mainsion9.co,kr</li>
-							<li class="af-dn">개인정보관리책임자 : 이영중(help@dealing-art.com)</li> 
+							<li class="af-dn">이메일 : help@dealing-art.com</li>
+							<li class="af-dn">개인정보관리책임자 : 이영중(privacy@dealing-art.com)</li> 
 							<!-- <li> - 이영중(help@dealing-art.com)</li> -->
 						</ol>
 					</div>
