--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -274,6 +274,7 @@
 						<div class="bat-box2">
 							<button type="button" class="ba-btn1" data-toggle="modal" data-target="#myModal4" id="btn_dealReg"><span>경매 시작하기</span></button>
 							<button type="button" class="ba-btn2" id="btn_dealReg" onclick="bidSuspension()"><span>거래 중단하기</span></button>
+							<button type="button" class="ba-btn2" onclick="javascript:window.history.back();"><span>돌아가기</span></button>
 						</div>
 						
 					</div>
@@ -328,13 +329,233 @@
 			<div class="modal-body">
 				<div class="md-box-1">
 					<div class="md-ds" style="color:#333;">
-						경매가 시작되면 취소할 수 없습니다.<br/>
-						신중히 결정해 주세요.
+						응찰이 되면 경매를 취소할 수 없습니다.<br/>신중히 결정해 주세요.
 					</div>
 					
 					<div class="baeg-btn mg_t30">
-						<a href="#"><button type="button" class="baeg-b1" onclick="dealReg()">확인</button></a>
+						<a href="#"><button type="button" class="baeg-b1" onclick="dealRegNotesModal()">확인</button></a>
 						<a href="#" data-dismiss="modal" aria-label="Close"><button type="button" class="baeg-b2">취소</button></a>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- 거래 등록 유의사항 -->
+<div class="modal fade modal-s" id="dealRegNotesModal" tabindex="-1" role="dialog" aria-labelledby="myModal5Label" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w800">
+		<div class="modal-content">
+			<div class="modal-header">
+				<div class="baegs">
+					<h2>거래 등록 유의사항</h2>
+				    <img src="/resources/img/ba/icon-2.png" class="con-img" />
+				    <div class="close" onclick="dealRegNotesModalClose()"><img src="resources/img/ba/icon-end_1.png" /></div>
+				</div>
+
+			</div>
+			<div class="modal-body" >
+				<div class="md-box-1">
+					<h4 class="infat-h4"><span class="c-red">판매</span>하시기 전에 꼭 확인을 해주세요. </h4>
+					
+					<div class="wrapper center-block">
+							<div class="panel-group2" id="accordion" role="tablist" aria-multiselectable="true">
+								<div class="panel panel-default2">
+									<div class="panel-heading2" role="tab" id="headingOne">
+										<h4 class="panel-title2">
+											<a>
+												<div class="db-div">
+													<input type="checkbox" id="cbx_bidAgree1"/>
+													<label for="cbx_bidAgree1"><span></span>
+														<div class="check-info">
+															<p>판매하려는 작품<b class="c-red dib" th:text="|(작품명 : ${result.work.workNm}, 작가명 : ${result.work.artstActvtyNm})|"></b>이 맞습니다.</p>
+															작품명, 사이즈, 제작연도, 액자유무, 작품보증서를 한 번 더 확인했습니다.
+														</div>
+													</label>
+												</div>
+											<div class="collapsdiv" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">보기</div>
+											</a>
+										</h4>
+									</div>
+								<div id="collapseOne" class="panel-collapse2 collapse" role="tabpanel" aria-labelledby="headingOne">
+									<div class="panel-body">
+										<div class="coll-text">
+											■ 거래 부적합 미술품</br>
+											1.작품 보증서 등의 위조, 변조<br/>
+											(정당한 권한이 없는 자가 타인의 명의를 도용하여 보증서의 내용을 작성하거나 변경한 것)<br/>
+
+											2.위작<br/>
+											(진품임을 가장하려는 의도로 작가명, 작품의 기록 또는 작품 전체를 위조, 변경하거나 서명을 위조하여 만들어진 작품)<br/>
+											
+											3.가품, 모조품<br/>
+											(진품의 모사본이나 복사본(replica)으로서 진품임을 가장하려는 의도는 없었으나 원본과 동일 또는 유사한 형태로 모방하여 만들어진 작품)<br/>
+											
+											4.심각한 파손품<br/>
+											(① 진품의 동일성을 해하는 정도의 개작이 이루어진 경우<br/> 
+												-진품에 덧대어 장식<br/> 
+												-진품의 크기를 분할<br/> 
+												-미완성인 작품을 완성하거나 과도한 보수작업<br/> 
+											 ② 미술품 복원 절차를 거치더라도 원작으로의 복원이 불가능한 정도로 진품의 형태, 성상, 크기, 품질이 중대하게 훼손, 파손된 경우)<br/>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="panel panel-default2">
+								<div class="panel-heading2" role="tab" id="headingTwo">
+									<h4 class="panel-title2">
+										<a>
+											<div class="db-div">
+												<input type="checkbox" id="cbx_bidAgree2"/>
+												<label for="cbx_bidAgree2"><span></span>
+													<div class="check-info">
+														<p>주문완료 또는 낙찰된 작품에 대한 <b class="c-red dib">취소가 불가</b>합니다.</p>
+														주문 완료 및 낙찰 시 <b class="c-red dib">1주일 이내에 작품을 인계</b>하여야 합니다.
+														<b class="c-red dib">중도 거래 취소가 불가</b>하며, 취소 시 <b class="c-red dib">거래취소수수료 10%</b>가 부과됩니다.
+													</div>
+												</label>
+											</div>
+											<!-- <div class="collapsdiv">보기</div> -->
+										</a>
+									</h4>
+								</div>
+								<div id="collapseTwo" class="panel-collapse2 collapse" role="tabpanel" aria-labelledby="headingTwo">
+									<div class="panel-body">
+								        <div class="coll-text">
+											
+
+										</div>
+									</div>
+								</div>
+							</div>
+							  <div class="panel panel-default2">
+							    <div class="panel-heading2" role="tab" id="headingThree">
+							      <h4 class="panel-title2">
+							        <a>
+							         <div class="db-div">
+										<input type="checkbox" id="cbx_bidAgree3"/>
+										<label for="cbx_bidAgree3"><span></span>
+											<div class="check-info">
+												<p>작품 판매 대한 수수료가 부과됩니다.</p>
+												판매자 : <b class="c-red dib">6%</b>, 구매자 3% (부가세 제외) 
+											</div>
+										</label>
+									</div>
+									<!-- <div class="collapsdiv">보기</div> -->
+							        </a>
+							      </h4>
+							    </div>
+							    <!-- <div id="collapseThree" class="panel-collapse2 collapse" role="tabpanel" aria-labelledby="headingThree">
+							      <div class="panel-body">
+							       <div class="coll-text">
+									</div>
+							      </div>
+							    </div> -->
+							  </div>
+							  
+							  <div class="panel panel-default2">
+							    <div class="panel-heading2" role="tab" id="headingfor">
+							      <h4 class="panel-title2">
+							        <a>
+							         <div class="db-div">
+										<input type="checkbox" id="cbx_bidAgree4"/>
+										<label for="cbx_bidAgree4"><span></span>
+											<div class="check-info">
+												<p>모든 미술품의 <b class="c-red dib">운송</b>은 <b class="c-red dib">직거래</b>가 불가능합니다.</p>
+												안전한 거래를 위해 판매자는 딜링아트 <b class="c-red dib">운송서비스</b>를 이용해야 합니다.
+											</div>
+										</label>
+									</div>
+									<div class="collapsdiv" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFor" aria-expanded="true" aria-controls="collapseOne">보기</div>
+							        </a>
+							      </h4>
+							    </div>
+							    <div id="collapseFor" class="panel-collapse2 collapse" role="tabpanel" aria-labelledby="headingfor">
+							      <div class="panel-body">
+							       <div class="coll-text">
+										■ 운송 유의사항<br/>
+											
+										-고객센터에서 운송서비스를 안내 받은 후 48시간 이내에 결제를 해야 됩니다.<br/>
+										-운송방법은 프리미엄 운송서비스와 직접운송 중 필수로 이용해야 되며 추가적으로 설치, 포장이 필요한 경우 선택이 가능합니다. <br/>
+										-작품가/부가서비스 미결제, 운송일정조율에 대한 응답거부, 작품운송의 인계 및 수취거부, 미술품 또는 보증서의 허위, 변조, 조작, 딜링아트 서비스 이용약관에 위반되는 행위가 발생되는 경우 거래가 취소 될 수 있습니다. <br/>
+										-미술품의 소유권은 구매자에게 운송이 완료 되기 전까지 판매자에게 있습니다. <br/>
+										-해외운송은 불가하며 제주도, 도서산간 지역, 조형작품은 별도문의를 통해 안내해드립니다.
+									</div>
+							      </div>
+							    </div>
+							</div>
+							
+							<div class="panel panel-default2">
+							    <div class="panel-heading2" role="tab" id="headingThree">
+							      <h4 class="panel-title2">
+							        <a>
+							         <div class="db-div">
+										<input type="checkbox" id="cbx_bidAgree5"/>
+										<label for="cbx_bidAgree5"><span></span>
+											<div class="check-info">
+												<p>딜링아트의 최신 이용정책을 모두 확인했습니다.</p>
+												안전한 거래를 위해 반드시 숙지해야 될 패널티규정, 부적절행위 등에 대한 이용정책을 확인했습니다. 
+											</div>
+										</label>
+									</div>
+									<div class="collapsdiv" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseOne">보기</div>
+							        </a>
+							      </h4>
+							    </div>
+							    <div id="collapseThree" class="panel-collapse2 collapse" role="tabpanel" aria-labelledby="headingThree">
+							      <div class="panel-body">
+							       <div class="coll-text">
+										■페널티 규정 <br/>
+										판매자와 구매자의 안전한 거래를 위해 아래 사유에 따라 거래 철회비가 부과됩니다.<br/>
+										<table class="tstyle4">
+											<tr>
+												<th>작품가, 부가서비스 미결제</th>
+												<td rowspan="2"><b class="c-red dib">작품가의 10.0%</b></td>
+											</tr>
+											<tr>
+												<th>최종 납입 통보 후 12시간 이내 미결제</th>
+											</tr>
+											<tr>
+												<th>응답거부 </th>
+												<td rowspan="2"><b class="c-red dib">작품가의 10.0%</b></td>
+											</tr>
+											<tr>
+												<th>48시간 이내 운송 일정 조율 불가 </th>
+											</tr>
+											<tr>
+												<th>작품인계 및 수취거부</th>
+												<td rowspan="2"><b class="c-red dib">작품가의 10.0%</b></td>
+											</tr>
+											<tr>
+												<th>협의된 운송일정에 연락이 두절 또는 작품의 인수/인계 거부</th>
+											</tr>
+											<tr>
+												<th>허위거래</th>
+												<td rowspan="2"><b class="c-red dib">작품가의 전액환불.<br/>작품가의 10.0%</b></td>
+											</tr>
+											<tr>
+												<th>미술품이나 보증서에 허위, 위조, 변조 및 기타 조작</th>
+											</tr>
+											<tr>
+												<th>거래약관위반</th>
+												<td rowspan="2"><b class="c-red dib">영구이용 정지,<br/>작품가의 10.0%</b></td>
+											</tr>
+											<tr>
+												<th>딜링아트 서비스 이용약관 위반</th>
+											</tr>
+										</table>
+										※거래 철회 사유를 야기한 책임 당사는 해당 미술품의 정찰가 혹은 낙찰가의 10%가 부과됩니다.<br/>
+										※거래 철회 수수료가 딜링아트에 지급이 된 후 3%의 금액을 피해 당사자에게 환급을 해드립니다. 
+
+									</div>
+							      </div>
+							    </div>
+							</div>
+						</div>
+					</div>
+					
+					<div class="baeg-btn mg_t30">
+						<button type="button" class="baeg-b1" onclick="dealReg()">동의</button>
+						<button type="button" class="baeg-b2" onclick="dealRegNotesModalClose()">취소</button>
 					</div>
 					
 				</div>
@@ -344,13 +565,14 @@
 </div>
 
 
-
 <script th:inline="javascript">
 $(function() {
 	if(sMbrSqVal == null || sMbrSqVal == ""){
 		modalAlertShow("로그인 후 이용하실 수 있습니다.", "main");
 	}
 });
+var result = /*[[${result}]]*/ 'default';
+
 $.datepicker.setDefaults({
 	dateFormat: 'yy.mm.dd',
 	prevText: '이전 달',
@@ -364,7 +586,7 @@ $.datepicker.setDefaults({
 	yearSuffix: '년'
 });
 
-var result = /*[[${result}]]*/ 'default';
+
 jQuery(document).ready(function() {
 	$("#dealStrtDt").datepicker().datepicker("setDate", result.deal.dealStrtDate);
 	$("#dealEndngDt").datepicker().datepicker("setDate", result.deal.dealEndngDate);
@@ -527,6 +749,7 @@ function startDateSel(obj){
 }
 
 function vaild(){
+	$("#myModal4").modal("hide");
 	if($("input:radio[name='dealPeriod']:checked").val() == "choice"){
 		if(result.deal.dealStrtDt == null || result.deal.dealStrtDt == "" ||
 			result.deal.dealEndngDt == null || result.deal.dealEndngDt == ""){
@@ -619,9 +842,8 @@ function vaild(){
 
 	return true;
 }
-
-function dealReg(){
-	$('#myModal4').modal('hide');
+//거래 등록 유의사항 팝업
+function dealRegNotesModal(){
 	result.deal.dealTypCd = $("input:radio[name='dealTypCd']:checked").val();
 	result.deal.mbrSq = sMbrSqVal;
 	if(result.deal.dealTypCd == "A"){
@@ -658,6 +880,26 @@ function dealReg(){
 	result.work.workProdcYear = $("#workProdcYear").val();
 	
 	if(vaild()){
+		$('body').css("overflow", "hidden");
+		$('#dealRegNotesModal').modal({backdrop: 'static', keyboard: false});
+		$("#dealRegNotesModal").modal("show");
+	}
+}
+//거래 등록 유의사항 팝업 닫기
+function dealRegNotesModalClose(){
+	$('body').css("overflow", "scroll");
+	$("#dealRegNotesModal").modal("hide");
+}
+//거래 등록
+function dealReg(){
+	$('#dealRegNotesModal').modal('hide');
+	if(!$("#cbx_bidAgree1").is(":checked") || !$("#cbx_bidAgree2").is(":checked") 
+			|| !$("#cbx_bidAgree3").is(":checked") || !$("#cbx_bidAgree4").is(":checked") || !$("#cbx_bidAgree5").is(":checked")){
+		$('body').css("overflow", "scroll");
+		modalAlertShow("모든 사항에 동의가 되어있지 않습니다!</br>모든 사항에 동의를 해야 응찰이 가능합니다.");
+		return;
+	}else{
+		
 		const formData = new FormData();
 		//보증서
 		const workGrtUrl = document.getElementById("workGrtUrl");
@@ -688,12 +930,15 @@ function dealReg(){
 	        contentType : false,
 	        processData : false,
 	        success: function(data) {
-	        	if(data != 0 || data != null || data != ""){
-	        		if(data > 0){
-	        			modalAlertShow("거래가 수정되었습니다.", "myDeal");
+	        	if(data > 0 || data != null || data != ""){
+	        		if(result.work.workTypCd == "COLL"){
+	        			modalAlertShow("거래가 등록되었습니다.", "myCollection");
+	        		}else if(result.work.workTypCd == "WORK"){
+	        			modalAlertShow("거래가 등록되었습니다.", "myWork");
 	        		}else{
-	        			modalAlertShow("응찰 또는 판매가 되어서 수정이 불가합니다.", "myDeal");
+	        			modalAlertShow("거래가 등록되었습니다.", "main");
 	        		}
+	        		
 	        	}
 	        },
 	        error: function(error) {
@@ -701,7 +946,6 @@ function dealReg(){
 	        }
 		});
 	}
-	
 }
 
 function bidSuspension(){
