--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -509,7 +509,7 @@ function myWorkReg(){
 	        processData : false,
 	        success: function(data) {
 	        	if(data != 0 || data != null || data != ""){
-	        		modalAlertShow("성공적으로 저장되었습니다.", "reload");
+	        		modalAlertShow("성공적으로 저장되었습니다.", "myWork");
 	        	}
 	        },
 	        error: function(error) {
