거래목록 > 더보기 누락 건 수정 거래상세 > 닉네임 링크 제거

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -77,10 +77,12 @@
 							</tr>
 							<tr>
 								<th>닉네임</th>
-								<td th:if="${not #strings.isEmpty(result.deal.mbrNcknm)}" th:onclick="|location.href='@{/artistDetail(artstSq=${result.deal.artstSq})}'|" style="cursor:pointer;">[[${result.deal.mbrNcknm}]]
+								<td th:if="${not #strings.isEmpty(result.deal.mbrNcknm)}" style="cursor:pointer;">[[${result.deal.mbrNcknm}]]
+<!-- 								<td th:if="${not #strings.isEmpty(result.deal.mbrNcknm)}" th:onclick="|location.href='@{/artistDetail(artstSq=${result.deal.artstSq})}'|" style="cursor:pointer;">[[${result.deal.mbrNcknm}]] -->
 <!-- 									<img th:if="${not #strings.isEmpty(result.deal.artstProfileImgUrl)}" th:src="${result.deal.artstProfileImgUrl}" th:onclick="|location.href='@{/artistDetail(artstSq=${result.deal.artstSq})}'|" style="cursor:pointer;width:28px;height:28px;border-radius:50%;" class="mg_l5"> -->
 								</td>
-								<td th:unless="${not #strings.isEmpty(result.deal.mbrNcknm)}" th:onclick="|location.href='@{/artistDetail(artstSq=${result.deal.artstSq})}'|">[[${result.deal.artstActvtyNm}]]
+									<td th:unless="${not #strings.isEmpty(result.deal.mbrNcknm)}" >[[${result.deal.artstActvtyNm}]]
+<!-- 									<td th:unless="${not #strings.isEmpty(result.deal.mbrNcknm)}" th:onclick="|location.href='@{/artistDetail(artstSq=${result.deal.artstSq})}'|">[[${result.deal.artstActvtyNm}]] -->
 <!-- 									<img th:if="${not #strings.isEmpty(result.deal.artstProfileImgUrl)}" th:src="${result.deal.artstProfileImgUrl}" th:onclick="|location.href='@{/artistDetail(artstSq=${result.deal.artstSq})}'|" style="cursor:pointer;width:28px;height:28px;border-radius:50%;" class="mg_l5"> -->
 								</td>
 							</tr>
