--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -501,21 +501,29 @@ function myWorkReg(){
 		}
 	    formData.append("work", new Blob([JSON.stringify(work)], {type: "application/json"}));
 	
-		$.ajax({
-	        type: "post",
-	        url: "/myWorkReg",
-	        data: formData,
-	        contentType : false,
-	        processData : false,
-	        success: function(data) {
-	        	if(data != 0 || data != null || data != ""){
-	        		modalAlertShow("성공적으로 저장되었습니다.", "myWork");
-	        	}
-	        },
-	        error: function(error) {
-	            alert("오류 발생" + error);
-	        }
-		});
+		
+		
+		
+		modalConfirm("알림", "시스템 기능 개선으로 인하여 삭제 및 비공개 처리가 불가능합니다. \n등록하시겠습니까?", 
+    		function(confirm){
+    			if(confirm){
+    				$.ajax({
+    			        type: "post",
+    			        url: "/myWorkReg",
+    			        data: formData,
+    			        contentType : false,
+    			        processData : false,
+    			        success: function(data) {
+    			        	if(data != 0 || data != null || data != ""){
+    			        		modalAlertShow("성공적으로 저장되었습니다.", "myWork");
+    			        	}
+    			        },
+    			        error: function(error) {
+    			            alert("오류 발생" + error);
+    			        }
+    				});
+    			}
+    	});
 	}
 
 }
