--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -797,6 +797,16 @@ function changePasswrd(){
 <script th:inline="javascript">
 $(document).ready(function() {
 	
+	
+	var agent = navigator.userAgent.toLowerCase();
+
+	if ( (navigator.appName == 'Netscape' && navigator.userAgent.search('Trident') != -1) || (agent.indexOf("msie") != -1) ) {
+// 		alert('익스플로러는 현재 마이크로소프트 지원 중단으로 인하여 다른 브라우저(크롬, 엣지, 사파리 등) 사용을 권장드립니다.');
+		modalAlertShow("익스플로러는 현재 마이크로소프트 지원 중단으로 인하여 다른 브라우저(크롬, 엣지, 사파리 등) 사용을 권장드립니다.","");
+	}
+	
+	
+	
 	$('#mbrCpNumBtn').click(function() {
 		
 		console.log("mbrCpNumBtn");
