거래등록 > 배송지 주소 관련

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -784,7 +784,7 @@ function vaild(){
 		return false;
 	}
 	if(result.work.workLake == null || result.work.workLake == ""){
-		modalAlertShow("호가가 입력되지 않았습니다.");
+		modalAlertShow("호수가 입력되지 않았습니다.");
 		return false;
 	}
 	if(result.work.workMatrl == null || result.work.workMatrl == ""){
