--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5093,8 +5093,8 @@ position: relative;background-color: #fbfbfb;}
 .md2-list .md2-sp2{padding-left: 16px;}
 
 .tstyle4{width: 100%;}
-.tstyle4 th{ font-size: 14px; font-weight: 600; color: #999999; width: 225px; /* padding-bottom: 30px; */background: #ededed;border: #cdcdcd 1px solid;padding: 5px;}
-.tstyle4 td{ color: #333333; font-size: 14px; font-weight: 600; /* padding-bottom: 30px; */border: #cdcdcd 1px solid;padding: 5px;}
+.tstyle4 th{ text-align: center; font-size: 14px; font-weight: 600; color: #999999; width: 225px; /* padding-bottom: 30px; */background: #ededed;border: #cdcdcd 1px solid;padding: 5px;}
+.tstyle4 td{ text-align: center; color: #333333; font-size: 14px; font-weight: 600; /* padding-bottom: 30px; */border: #cdcdcd 1px solid;padding: 5px;}
 .tstyle4 tr:last-child th{padding-bottom:0;}
 .tstyle4 tr:last-child td{padding-bottom:0;}
 
