--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -105,7 +105,7 @@
 							<div class="myd-box">
 								<div class="myd-box-1">
 									<div class="mtext">
-										<p>※ 회원의 주소와 배송지의 주소가 동일해야 합니다.<br>※ 본 거래의 주소를 수정하시면 회원정보도 함께 변경됩니다.</p>
+										<p>※ 본 거래의 주소를 수정하시면 회원정보도 함께 변경됩니다.</p>
 										<button type="button" class="btns-1" data-toggle="modal" data-target="#newAddrModal">보내는 사람 정보 수정하기</button>
 									</div>
 									
