--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -435,8 +435,8 @@
 										<input type="checkbox" id="cbx_bidAgree3"/>
 										<label for="cbx_bidAgree3"><span></span>
 											<div class="check-info">
-												<p>작품 판매 대한 수수료가 부과됩니다.</p>
-												판매자 : <b class="c-red dib">6%</b>, 구매자 3% (부가세 제외) 
+												<p>작품 판매에 대한 수수료가 부과됩니다.</p>
+												판매자 : 3%, 구매자 6% (부가세 제외) 
 											</div>
 										</label>
 									</div>
