--- a/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
@@ -94,6 +94,7 @@
 										</div>
 									</div>
 									<div class="input-box">
+										<p class="inp-p">작품 운송에 필요한 주소지를 등록해주세요.</p>
 										<p class="inp-p" id="mbrDelivryAddrCheck"></p>
 									</div>
 									
