--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -157,10 +157,10 @@
 							</li>
 						</ul>
 						<div class="bat-box">
-							<button type="button" class="ba-btn1 por" id="btn_purchaseOrBid" onclick="btn_purchaseOrBid_onclick()"><span>응찰하기</span></button>
+							<button type="button" class="ba-btn1 por" id="btn_purchaseOrBid" onclick="btn_purchaseOrBid_onclick()" style="display:none;"><span>응찰하기</span></button>
 							<button type="button" class="ba-btn2" onclick="javascript:fnModalAlert();"><img src="resources/img/de/mo/icon-1.jpg" /><span>공유하기</span></button>
 							<button type="button" class="ba-btn3" id="btn_history" data-toggle="modal" data-target="#bidHistory"><img src="resources/img/de/mo/icon-2.jpg" /><span>응찰 히스토리</span></button>
-							<button type="button" class="ba-btn3" onclick="javascript:history.go(-2);"><span>목록으로 돌아가기</span></button>
+							<button type="button" class="ba-btn3" onclick="javascript:history.back();"><span>목록으로 돌아가기</span></button>
 							<div class="clearboth"></div>
 						</div>
 						
@@ -485,8 +485,8 @@
 										<input type="checkbox" id="cbx_bidAgree3"/>
 										<label for="cbx_bidAgree3"><span></span>
 											<div class="check-info">
-												<p>작품 판매 대한 수수료가 부과됩니다.</p>
-												판매자 : <b class="c-red dib">6%</b>, 구매자 3% (부가세 제외) 
+												<p>작품 판매에 대한 수수료가 부과됩니다.</p>
+												판매자 : 3%, 구매자 6% (부가세 제외) 
 											</div>
 										</label>
 									</div>
@@ -647,6 +647,9 @@ $('.selectpicker').selectpicker('render');
 var result = /*[[${result}]]*/ 'default';
 
 $(function() {
+	if(sMbrSqVal == '303'){
+		$("#btn_purchaseOrBid").css("display", "");
+	}
 	$("#sbx_bidPrc").selectpicker("refresh");
 	if(sMbrSqVal != null && sMbrSqVal != ""){
 		if(result.deal.bidMbrSq == sMbrSqVal){
