Deal 필터 사진->그림 TEXT 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -96,7 +96,7 @@
                                         <input type="checkbox" id="c22" name="workClsfcCd" value="EDITION" class="searchOption" onclick="dealSearch()"/>
 										<label for="c22"><span></span>에디션</label><br/>
                                         <input type="checkbox" id="c33" name="workClsfcCd" value="PICTURE" class="searchOption" onclick="dealSearch()"/>
-										<label for="c33"><span></span>그림</label>
+										<label for="c33"><span></span>사진</label>
 										<!-- <input type="checkbox" id="c1" name="workClsfcCd" value="ORNTPAI" class="searchOption" onclick="dealSearch()"/>
 										<label for="c1"><span></span>동양화</label><br/>
                                         <input type="checkbox" id="c2" name="workClsfcCd" value="WSTNPAI" class="searchOption" onclick="dealSearch()"/>
