모바일 결제창 안뜨는거 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -626,7 +626,7 @@ function btn_payment(){
 					if(!isMobile){
 						Mainpay.open(response.data.nextPcUrl);
 					}else{
-						Mainpay.open(response.data.nextMobileUrl);
+						location.href = response.data.nextMobileUrl;
 					}
 					return false;
 				}
