아이폰 결제창 안뜨는 거 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -731,10 +731,11 @@ function btn_paymethod_onclick(obj){
 				console.log(response);
 				if (response.resultCode == '200') {
 					/* 결제창 호출 */
+					debugger;
 					if(!isMobile){
 						Mainpay.open(response.data.nextPcUrl);
 					}else{
-						location.href = response.data.nextMobileUrl;
+						location.href = response.data.nextPcUrl.replace("pc", "mobile");
 					}
 					return false;
 				}
@@ -765,7 +766,7 @@ function btn_paymethod_onclick(obj){
 					if(!isMobile){
 						Mainpay.open(response.data.nextPcUrl);
 					}else{
-						location.href = response.data.nextMobileUrl;
+						location.href = response.data.nextPcUrl.replace("pc", "mobile");
 					}
 					return false;
 				}
