아티스트 라이브러리 모바일 화면깨짐

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -77,7 +77,9 @@
 			</div>
 			
 		</div>
-		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
+		<div id="footerAl">
+			<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
+		</div>
 	</div>
 
 
@@ -623,7 +625,7 @@ function masonryLayout() {
 
 //화면 레이아웃 추가
 function masonryLayout() {
-	
+	console.log("masonryLayout")
 	var msnry = new Masonry( '.grid', {
 
 			
@@ -647,6 +649,8 @@ function masonryLayout() {
 
 
 $( document ).ready(function() {
+	
+	
 	 
   $("#pills-profile-tab").unbind("click").bind("click",function(){
 	  
@@ -661,6 +665,12 @@ $( document ).ready(function() {
 		});
 		 
 	});
+
+	if(isMobile == true) {
+		$("#footerAl").css("padding-top","1000px")
+	}
+
+	
 	 	
 });
 
