--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetailWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetailWork.html
@@ -582,7 +582,9 @@ $( document ).ready(function() {
 		});
 		 
 	 
-		 
+	  if(isMobile == true) {
+			$("#footerAl").css("padding-top","1000px")
+		} 
 		 	
 	});
 </script>
