--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -897,7 +897,8 @@ function mainMobileAuthSuccess(returnValue) {
         	}
         },
         error: function(error) {
-            alert("오류 발생" + error);
+        	var errorTxt = JSON.stringify(error);
+            alert("오류 발생" + errorTxt);
         }
 	});	
 }
